# astronaut

./: Cargo.toml  README.md
src/: app.rs  build.rs  config.rs  lib.rs
src/macros/: app.rs  config.rs  endpoint.rs  mod.rs
tests/macros/: mod.rs
tests/macros/app/: simple_app_init.rs
tests/macros/endpoint/: simple_endpoint_def.rs
tests/site/: .gitignore  Cargo.toml  build.rs
tests/site/src/config/: database.rs  templates.rs
