[package]
name = "astronaut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
serde_json = "1.0.83"
glob = "0.3.0"

[dev-dependencies]
trybuild = "1.0"